objects/UIP__c.object
<CustomObject><fields>
<fields>
        <fullName>Section_3_Percent_Complete__c</fullName>
        <label>Section 3 Percent Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Section_3__c</fullName>
        <label>Section III</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Section_III_Current_Performance_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Section III Current Performance Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Section_III_Data_Narrative_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check when the Data Narrative is complete.</inlineHelpText>
        <label>Section III Data Narrative Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Section_III_PPCs_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Section III PPCs Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Section_III_Progress_Status__c</fullName>
        <formula>If (AND( Section_III_Worksheet_1_Complete__c , Section_III_Worksheet_2_Complete__c , Section_III_Data_Narrative_Complete__c,Section_III_PPCs_Complete__c ,Section_III_Root_Cause_Complete__c,Section_III_Trend_Analysis_Complete__c,Section_III_Current_Performance_Complete__c)= True, "Ready to Submit", "In Progress")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section III Progress Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Section_III_Root_Cause_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Section III Root Cause Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Section_III_Trend_Analysis_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Section III Trend Analysis Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Section_III_Worksheet_1_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check when Worksheet 1 is complete.</inlineHelpText>
        <label>Section III Brief Description Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Section_III_Worksheet_2_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check when Worksheet 2 is complete.</inlineHelpText>
        <label>Section III Prior Targets Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Section_II_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check when Section II is complete.</inlineHelpText>
        <label>Section II Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Section_II_Progress_Status__c</fullName>
        <formula>if( Section_II_Complete__c = TRUE, "Ready to Submit", "In Progress")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section II Progress Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Section_IV_Action_Planning_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check when Action Planning is complete.</inlineHelpText>
        <label>Section IV Action Planning Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Section_IV_Major_Imp_Strategies_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Section IV Major Imp Strategies Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Section_IV_Progress_Status__c</fullName>
        <formula>IF (AND( Section_IV_Target_Setting_Complete__c ,  Section_IV_Action_Planning_Complete__c ) = TRUE, "Ready to Submit", "In Progress")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section IV Progress Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Section_IV_Target_Setting_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check when Target Setting is complete.</inlineHelpText>
        <label>Section IV Target Setting Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Section_I_Progress_Status__c</fullName>
        <formula>if ( UIP_Annual_CDE_Plan__r.Section_1_Update_Status__c  = True, "Ready to Submit",(if(UIP_Annual_CDE_Plan__r.Section_1_Data_Status__c = True, "Updated","Not Started")))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Section I Progress Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_MeetNorm__c</fullName>
        <label>AS Measure 1 Expectation</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_Metric__c</fullName>
        <label>AS Measure 1 Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_Name__c</fullName>
        <description>Stat_AddMeas_1_Name</description>
        <label>AS Measure 1 Name</label>
        <length>75</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj1_MeetCutE__c</fullName>
        <label>AS Measure 1 Subject 1 Elem</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj1_MeetCut_H__c</fullName>
        <label>AS Measure 1 Subject 1 HS</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj1_MeetCut_M__c</fullName>
        <label>AS Measure 1 Subject 1 MS</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj1_Name__c</fullName>
        <label>AS Measure 1 Subject 1 Name</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj1_ResultH__c</fullName>
        <label>AS Measure 1 Subject 1 Result HS</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj1_ResultM__c</fullName>
        <label>AS Measure 1 Subject 1 Result MS</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj1_Result_E__c</fullName>
        <label>AS Measure 1 Subject 1 Result Elem</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj2ResultE__c</fullName>
        <label>AS Measure 1 Subject 2 Result Elem</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj2ResultH__c</fullName>
        <label>AS Measure 1 Subject 2 Result HS</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj2_MeetCutE__c</fullName>
        <label>AS Measure 1 Subject 2 Elem</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj2_MeetCutH__c</fullName>
        <label>AS Measure 1 Subject 2 HS</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj2_MeetCutM__c</fullName>
        <label>AS Measure 1 Subject 2 MS</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj2_Name__c</fullName>
        <label>AS Measure 1 Subject 2 Name</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj2_ResultM__c</fullName>
        <label>AS Measure 1 Subject 2 Result MS</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj3_MeetCutE__c</fullName>
        <label>AS Measure 1 Subject 3 Elem</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj3_MeetCutH__c</fullName>
        <label>AS Measure 1 Subject 3 HS</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj3_MeetCutM__c</fullName>
        <label>AS Measure 1 Subject 3 MS</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj3_Name__c</fullName>
        <label>AS Measure 1 Subject 3 Name</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj3_ResultE__c</fullName>
        <label>AS Measure 1 Subject 3 Result Elem</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj3_ResultH__c</fullName>
        <label>AS Measure 1 Subject 3 Result HS</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj3_ResultM__c</fullName>
        <label>AS Measure 1 Subject 3 Result MS</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj4_MeetCutH__c</fullName>
        <label>AS Measure 1 Subject 4 HS</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj4_MeetCutM__c</fullName>
        <label>AS Measure 1 Subject 4 MS</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj4_ResultE__c</fullName>
        <label>AS Measure 1 Subject 4 Result Elem</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_1_subj4_ResultH__c</fullName>
        <label>AS Measure 1 Subject 4 Result HS</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Stat_AddMeas_2_MeetNorm__c</fullName>
        <label>AS Measure 2 Expectation</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Stat_AddMeas_2_Metric__c</fullName>
        <label>AS Measure 2 Description</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Stat_AddMeas_2_Name__c</fullName>
        <label>AS Measure 2 Name</label>
        <length>75</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Stat_AddMeas_2_subj1_ResultE__c</fullName>
        <label>AS Measure 2 Subject 1 Result Elem</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>State_Accreditation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>State Accreditation</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Student_Grad_Com_Plan_Progress_Status__c</fullName>
        <formula>if(   Student_Grad_Completion_Plan_Complete__c  =TRUE, "Ready to Submit","In Progress")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Grad Com Plan Progress Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Student_Grad_Completion_Plan_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Student Grad Completion Plan Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Student_Grad_Completion_Plan__c</fullName>
        <label>Student Grad Completion Plan</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Recommended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Student_Graduation_and_Completion_Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Student Graduation and Completion Plan</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sub_Ind_PWR_Directions__c</fullName>
        <label>Sub Ind PWR Directions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Submit_for_School_View__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this box will generate the UIP and send to CDE's Google Drive.</description>
        <inlineHelpText>Checking this box will generate the UIP and send to CDE.  This is automatically unchecked after a submission, to allow districts to submit multiple times.</inlineHelpText>
        <label>Submit to CDE</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>TARG_E_ACH_PA_PCT_MATH__c</fullName>
        <label>Target Elem Math</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>TARG_E_ACH_PA_PCT_READ__c</fullName>
        <label>Target Elem Read</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>TARG_E_ACH_PA_PCT_SCI__c</fullName>
        <label>Target Elem Science</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>TARG_E_ACH_PA_PCT_WRITE__c</fullName>
        <label>Target Elem Write</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>TARG_H_ACH_PA_PCT_MATH__c</fullName>
        <label>Target HS Math</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>TARG_H_ACH_PA_PCT_READ__c</fullName>
        <label>Target HS Read</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>TARG_H_ACH_PA_PCT_SCI__c</fullName>
        <label>Target HS Science</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>TARG_H_ACH_PA_PCT_WRITE__c</fullName>
        <label>Target HS Write</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>TARG_M_ACH_PA_PCT_MATH__c</fullName>
        <label>Target MS Math</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>TARG_M_ACH_PA_PCT_READ__c</fullName>
        <label>Target MS Read</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>TARG_M_ACH_PA_PCT_SCI__c</fullName>
        <label>Target MS Science</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>TARG_M_ACH_PA_PCT_WRITE__c</fullName>
        <label>Target MS Write</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>TARG_PS_ACT_SCORE__c</fullName>
        <label>Target ACT Score</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>TARG_PS_DROP_RATE__c</fullName>
        <label>Target Dropout Rate</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>TIG_Closure_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TIG - Closure Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>TIG_Closure_Percent_Complete__c</fullName>
        <label>TIG - Closure Percent Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>TIG_Closure_Progress_Status__c</fullName>
        <formula>if(   TIG_Closure_Complete__c  =TRUE, "Ready to Submit","In Progress")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TIG Closure Progress Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>TIG_Closure__c</fullName>
        <label>TIG - Closure</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Recommended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>TIG_DIRECTIONS__c</fullName>
        <label>TIG Directions</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>TIG_FOCUS_DIRECTIONS__c</fullName>
        <label>TIG Focus Directions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>TIG_FOCUS_TYPE__c</fullName>
        <label>TIG Focus Type</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>TIG_Restart_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TIG - Restart Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>TIG_Restart_Percent_Complete__c</fullName>
        <label>TIG - Restart Percent Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>TIG_Restart_Progress_Status__c</fullName>
        <formula>if(    TIG_Restart_Complete__c    =TRUE, "Ready to Submit","In Progress")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TIG Restart Progress Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>TIG_Restart__c</fullName>
        <label>TIG - Restart</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>TIG_TYPE__c</fullName>
        <label>TIG Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>TIG_Transformation_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TIG - Transformation Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>TIG_Transformation_Percent_Complete__c</fullName>
        <label>TIG - Transformation Percent Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>TIG_Transformation_Progress_Status__c</fullName>
        <formula>IF( TIG_Transformation_Complete__c =TRUE, "Ready to Submit", "In Progress")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TIG Transformation Progress Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>TIG_Transformation__c</fullName>
        <label>TIG - Transformation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Recommended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>TIG_Turnaround_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TIG - Turnaround Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>TIG_Turnaround_Percent_Complete__c</fullName>
        <label>TIG - Turnaround Percent Complete</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>TIG_Turnaround_Progress_Status__c</fullName>
        <formula>if(   TIG_Turnaround_Complete__c   =TRUE, "Ready to Submit","In Progress")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TIG Turnaround Progress Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>TIG_Turnaround__c</fullName>
        <label>TIG - Turnaround</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>TITLE1A_DIRECTIONS__c</fullName>
        <label>Title IA Directions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>TITLE1A_TYPE__c</fullName>
        <label>Title IA Type</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>TITLE2A_DIRECTIONS__c</fullName>
        <label>Title IIA Directions</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>TITLE2A_TYPE__c</fullName>
        <label>Title IIA Type</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>TITLE3_DIRECTIONS__c</fullName>
        <label>Title IIIA Description</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>TITLE3_TYPE__c</fullName>
        <label>Title IIIA Type</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>TNG_Directions__c</fullName>
        <label>TNG_Directions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>TNG__c</fullName>
        <description>Turnaround Network Grantee</description>
        <label>TNG</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Target_Reflection__c</fullName>
        <description>Brief reflection on why previous targets were 
met or not met.</description>
        <inlineHelpText>Brief reflection on why previous targets were 
met or not met.</inlineHelpText>
        <label>Target Reflection</label>
        <length>100000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>TextAreaRich_Test__c</fullName>
        <label>Narrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Tiered_Intervention_Grant_TIG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tiered Intervention Grant (TIG)</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Title_1_Percent_Complete__c</fullName>
        <label>Title I School Wide Percent Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Title_1_School_Wide__c</fullName>
        <label>Title I School Wide</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Recommended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Title_IA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title IA</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Title_IIA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title IIA</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Title_III_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title III</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Title_III_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title III Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Title_III_Progress_Status__c</fullName>
        <formula>if(  Title_III_Complete__c  =TRUE, "Ready to Submit","In Progress")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title III Progress Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Title_III__c</fullName>
        <label>Title III</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Recommended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Title_I_Focus_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title I Focus School</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Title_I_School_Wide_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title I School Wide Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Title_I_School_Wide_Progress_Status__c</fullName>
        <formula>if(   Title_I_School_Wide_Complete__c   =TRUE, "Ready to Submit","In Progress")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title I School Wide Progress Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Turnaround_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Turnaround Complete</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Turnaround_Percent_Complete__c</fullName>
        <label>Turnaround Percent Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>Turnaround_Progress_Status__c</fullName>
        <formula>if( Turnaround_Complete__c =TRUE, "Ready to Submit","In Progress")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Turnaround Progress Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Turnaround__c</fullName>
        <label>Turnaround</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Optional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>UAIP_PS_COMP_BEST_CR__c</fullName>
        <label>Completion Rate Results</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>UAIP_PS_COMP_RATING__c</fullName>
        <label>Completion Rate Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Does Not Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>UAIP_STENG_ADA_RATE__c</fullName>
        <label>SE Daily Attendence Result</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>UAIP_STENG_ADA_TARG_RATE__c</fullName>
        <label>SE Daily Attendence Expectation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>UAIP_STENG_Directions__c</fullName>
        <description>AEC Student Engagement</description>
        <label>UAIP STENG Directions</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>UAIP_STENG_RATING__c</fullName>
        <label>Student Engagement Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Does Not Meet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>UAIP_STENG_TRU_RATE__c</fullName>
        <label>SE Truancy Rate Result</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>UAIP_STENG_TRU_TARG_RATE__c</fullName>
        <label>SE Truancy Rate Expecation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>UAIP_TARG_PS_COMP_BEST_CR__c</fullName>
        <label>Target Completion Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>UIP_Annual_CDE_Plan__c</fullName>
        <label>UIP Annual CDE Plan</label>
        <referenceTo>UIP_Annual_CDE_Plan__c</referenceTo>
        <relationshipLabel>UIP</relationshipLabel>
        <relationshipName>UIP</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>UIP_Percent_Complete__c</fullName>
        <label>UIP Percent Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields><fields>
        <fullName>UIP_Status__c</fullName>
        <label>UIP Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit to CDE for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Re-Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submit to CDE for Re-Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feedback Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received by CDE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted for Posting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exercising Biennial Flexibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for District Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>UIP_source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UIP_source</label>
        <referenceTo>UIP__c</referenceTo>
        <relationshipLabel>UIP (UIP_source)</relationshipLabel>
        <relationshipName>UIP3</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Upload_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upload Validation</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>X21st_Century_Instructions__c</fullName>
        <description>Competitive grant program authorized under Title IV, Part B of ESEA used to establish or expand community learning centers that provide students with academic enrichment opportunities.</description>
        <inlineHelpText>Competitive grant program authorized under Title IV, Part B of ESEA used to establish or expand community learning centers that provide students with academic enrichment opportunities.</inlineHelpText>
        <label>21st Century Instructions</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>    </recordTypes></CustomObject>